# omni

./: .gitignore
.claude/: settings.json
Ballbot_/: .cproject  .mxproject  .project  Ballbot.ioc
Ballbot_/Debug/: Ballbot.elf  Ballbot.list  Ballbot.map  makefile  objects.list
Ballbot_/Debug/Core/Src/: dma.d  fdcan.cyclo  fdcan.d  fdcan.su  gpio.d  main.cyclo  main.d  main.su  stm32h7xx_hal_msp.d  stm32h7xx_it.cyclo  stm32h7xx_it.d  (+6 more)
Ballbot_/MDK-ARM/: Ballbot.uvguix.44897  Ballbot.uvguix.86151  Ballbot.uvguix.学习  Ballbot.uvoptx  Ballbot.uvprojx  startup_stm32h723xx.lst
Ballbot_/MDK-ARM/Ballbot/: Ballbot.axf  Ballbot.build_log.htm  Ballbot.hex  Ballbot.htm  Ballbot.lnp  Ballbot.map  Ballbot_Ballbot.dep  bsp_fdcan.crf  bsp_fdcan.d  cmsis_os2.crf  cmsis_os2.d  controller.crf  controller.d  croutine.crf  croutine.d  djimotor3508.crf  djimotor3508.d  dma.crf  dma.d  e65.crf  event_groups.crf  event_groups.d  fdcan.crf  fdcan.d  fliter.crf  fliter.d  freertos.crf  freertos.d  gpio.crf  gpio.d  heap_4.crf  heap_4.d  hwt606imu.crf  hwt606imu.d  list.crf  list.d  main.crf  main.d  orangepi.crf  pid.crf  (+66 more)
omni_RL/: README.md
omni_RL/scripts/: list_envs.py  random_agent.py  zero_agent.py
omni_RL/scripts/rsl_rl/: cli_args.py  play.py  train.py
omni_RL/source/omni_RL/: setup.py
omni_ballbot/meshes/: roll_arrow_ring.stl  wheel_base.STL  wheel_link_A.STL  wheel_link_B.STL
omni_ballbot/xml/: omni_ballbot.xml  robot_scene.xml
omni_sim/: CMakeLists.txt  MUJOCO_LOG.TXT  imgui.ini  simple.cpp
omni_sim/include/: ballbot_pid.h
omni_sim/plog/: pid_debug_Layer1_Velocity.csv  pid_debug_Layer1b_Yaw.csv  pid_debug_Layer2_Attitude.csv  pid_debug_Layer4_Wheel.csv  plot_pid_debug.py
omni_sim/src/: ballbot_pid.cpp
(+42 files in other folders)
